@@ -67,6 +67,7 @@ public class AndroidMini2DxGame extends Activity implements AndroidApplicationBa
 	protected AndroidAudio audio;
 	protected AndroidFiles files;
 	protected AndroidNet net;
+	protected AndroidClipboard clipboard;
 	protected ApplicationListener listener;
 	public Handler handler;
 	protected boolean firstResume = true;
@@ -101,7 +102,23 @@ public class AndroidMini2DxGame extends Activity implements AndroidApplicationBa
 	 * This method has to be called in the {@link Activity#onCreate(Bundle)}
 	 * method. It sets up all the things necessary to get input, render via
 	 * OpenGL and so on. You can configure other aspects of the application with
-	 * the rest of the fields in the {@link AndroidMini2DxConfig} instance.
+	 * the rest of the fields in the {@link AndroidMini2DxConfig}
+	 * instance.
+	 * 
+	 * @param listener
+	 *            the {@link ApplicationListener} implementing the program logic
+	 * @param config
+	 *            the {@link AndroidMini2DxConfig}, defining various
+	 *            settings of the application (use accelerometer, etc.).
+	 */
+	public void initialize(ApplicationListener listener, AndroidMini2DxConfig config) {
+		init(listener, config, false);
+	}
+
+	/**
+	 * This method has to be called in the {@link Activity#onCreate(Bundle)}
+	 * method. It sets up all the things necessary to get input, render via
+	 * OpenGL and so on. Uses a default {@link AndroidApplicationConfiguration}.
 	 * <p>
 	 * Note: you have to add the returned view to your layout!
 	 * 
@@ -114,6 +131,27 @@ public class AndroidMini2DxGame extends Activity implements AndroidApplicationBa
 	 */
 	public View initializeForView(GameContainer game, AndroidMini2DxConfig config) {
 		init(new AndroidGameWrapper(getApplicationContext(), game, config.gameIdentifier), config, true);
+		return initializeForView(listener, config);
+	}
+
+	/**
+	 * This method has to be called in the {@link Activity#onCreate(Bundle)}
+	 * method. It sets up all the things necessary to get input, render via
+	 * OpenGL and so on. You can configure other aspects of the application with
+	 * the rest of the fields in the {@link AndroidApplicationConfiguration}
+	 * instance.
+	 * <p>
+	 * Note: you have to add the returned view to your layout!
+	 * 
+	 * @param listener
+	 *            the {@link ApplicationListener} implementing the program logic
+	 * @param config
+	 *            the {@link AndroidApplicationConfiguration}, defining various
+	 *            settings of the application (use accelerometer, etc.).
+	 * @return the GLSurfaceView of the application
+	 */
+	public View initializeForView(ApplicationListener listener, AndroidMini2DxConfig config) {
+		init(listener, config, true);
 		return graphics.getView();
 	}
 
@@ -132,6 +170,7 @@ public class AndroidMini2DxGame extends Activity implements AndroidApplicationBa
 		this.handler = new Handler();
 		this.useImmersiveMode = config.useImmersiveMode;
 		this.hideStatusBar = config.hideStatusBar;
+		this.clipboard = new AndroidClipboard(this);
 
 		// Add a specialized audio lifecycle listener
 		addLifecycleListener(new LifecycleListener() {
@@ -308,12 +347,6 @@ public class AndroidMini2DxGame extends Activity implements AndroidApplicationBa
 	@Override
 	protected void onDestroy() {
 		super.onDestroy();
-		Gdx.app = null;
-		Gdx.input = null;
-		Gdx.audio = null;
-		Gdx.files = null;
-		Gdx.graphics = null;
-		Gdx.net = null;
 	}
 
 	@Override
@@ -371,13 +404,8 @@ public class AndroidMini2DxGame extends Activity implements AndroidApplicationBa
 		return new AndroidPreferences(getSharedPreferences(name, Context.MODE_PRIVATE));
 	}
 
-	AndroidClipboard clipboard;
-
 	@Override
 	public Clipboard getClipboard() {
-		if (clipboard == null) {
-			clipboard = new AndroidClipboard(this);
-		}
 		return clipboard;
 	}
 
