@@ -366,6 +366,7 @@ if (Os.isFamily(Os.FAMILY_MAC)) {
         	compile "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
 			compile "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
 			compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+			compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-ios"
 			
 			compile "org.reflections:reflections:$reflectionsVersion"
 			compile "commons-beanutils:commons-beanutils:$beanutilsVersion"
