@@ -1,0 +1,3 @@
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xms128m -Xmx2048m
+org.gradle.configureondemand=true
