@@ -1,6 +1,6 @@
 android {
     buildToolsVersion "23.0.1"
-    compileSdkVersion 20
+    compileSdkVersion 21
 	defaultConfig {
 		testApplicationId "org.mini2Dx.uats.android.test"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -52,7 +52,7 @@ task copyAndroidNatives() {
     }
 }
 
-task run(type: Exec) {
+task launchAndroid(type: Exec, dependsOn: ':mini2Dx-uats-android:installDebug') {
     def path
     def localProperties = project.file("../local.properties")
     if (localProperties.exists()) {
