@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-20
+target=android-21
 android.library.reference.1=aarDependencies/com.android.support.test-runner-0.4
 android.library.reference.2=aarDependencies/com.android.support.test-rules-0.4
 android.library.reference.3=aarDependencies/com.android.support.test-exposed-instrumentation-api-publish-0.4
