@@ -11,6 +11,7 @@
 - (#50) Fixed TiledMap rendering incorrectly when scaled down
 - (#54) Added performance benchmarking for collisions
 - (#55) Added non-rectangle support to RegionQuadTree and ConcurrentRegionQuadTree
+- Improved Graphics#clip performance on mobile devices (changed to Depth Buffer method)
 - Added UI framework (mini2Dx-ui)
 - Added headless runtime (mini2Dx-headless)
 - Added controller mappings - Xbox One, Xbox 360 controllers
